# rss-feed-processor

./: .coverage  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  __init__.py  cli.py  conftest.py  debug_email_structure.py  debug_summarizer_output.py  deploy_production.ps1  feed_diagnostics_results.json  final_test.py  final_validation.py  inspect_feed.py  production_deploy.ps1  production_verification.py  pyproject.toml  pytest.ini  quick_production_check.py  quick_test.py  requirements.txt  run.ps1  run_app.ps1  run_daily_production.bat  run_diagnostics.py  setup.py  simple_test.py  system_status.py  system_verification.py  test_date_fix.py  test_debug_rss.py  test_email_logic.py  test_env.py  test_optimized_rss.py  test_rss.py
.github/workflows/: daily_run.yml  test_secrets.yml
config/: feeds.txt  recipients.txt
reports/: junit.xml  test_report.html
rss_feed_processor.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  app.py  main.py  main.py.new  main_new.py
src/agents/: rss_reader.py  rss_reader.py.backup  rss_reader.py.tmp  summarizer.py  summarizer.py.new
src/config/: config.py  feeds.txt  feeds_optimized.txt  settings.py
src/models/: __init__.py  news_item.py
src/rss_feed_processor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/templates/: email_template.html  prompts.py
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_config.py  test_connection_tester.py  test_email_sender.py  test_gemini_client.py  test_rss_reader.py  test_settings.py  test_summarizer.py
(+6 files in other folders)
